# project-smart-fridge

./: .gitmodules  README.md
firmware/: .dockerignore  .gitignore  Dockerfile  Dockerfile.ha  Dockerfile.mosquitto  device.yaml  docker-compose.dev.yml  docker-compose.yml  forensic.py  fridge.py  i2c_helper.py  main.py  persistent_state.py  pyproject.toml
firmware-relay/: .gitignore  README.md  docker-compose.yml  fridge-relay.yaml
firmware/config/: configuration.yaml  mosquitto.conf
firmware/config/ha/: configuration.yaml
