[tool.poetry]
name = "smart-fridge"
version = "0.1.0"
description = ""
authors = ["Francois Gervais <francoisgervais@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
adafruit-circuitpython-mlx90640 = "^1.2.3"
hidapi = "^0.10.1"
matplotlib = "^3.4.2"
paho-mqtt = "^1.5.1"
adafruit-circuitpython-tmp117 = "^1.0.4"
python-kasa = "^0.4.0-dev.3"
adafruit-blinka = {git = "https://github.com/fgervais/Adafruit_Blinka.git", rev = "smart-fridge"}
adafruit-circuitpython-onewire = "^1.2.6"
adafruit-circuitpython-ds18x20 = "^1.3.7"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
